Refactor experiments to support multiple problems